@@ -9,6 +9,14 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <licenses>
+        <license>
+            <name>Apache 2.0 License</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <modules>
         <module>server</module>
         <module>assembly</module>
@@ -18,40 +26,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <junit.version>4.12</junit.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <scala.library>2.11</scala.library>
         <scala.version>2.11.8</scala.version>
+        <scala.binary.version>2.11</scala.binary.version>
         <scalatest.version>2.2.5</scalatest.version>
-        <akka.version>2.4.17</akka.version>
-        <akka-http.version>10.0.5</akka-http.version>
-        <slick.version>3.2.0</slick.version>
-        <kafka.version>0.10.0.0</kafka.version>
-        <hadoop.version>2.7.1</hadoop.version>
-        <hbase.version>1.1.2</hbase.version>
-        <spark.version>2.0.2</spark.version>
-        <tachyon.version>0.7.1</tachyon.version>
-        <zookeeper.version>3.4.6</zookeeper.version>
-        <jackson.version>2.6.5</jackson.version>
-        <json4s.version>3.2.11</json4s.version>
-        <slf4j.version>1.7.21</slf4j.version>
-        <guava.version>19.0</guava.version>
-        <edp-moonbox.version>1.0-SNAPSHOT</edp-moonbox.version>
     </properties>
 
-    <distributionManagement>
-        <repository>
-            <id>ce-nexus</id>
-            <url>http://10.100.31.71:8080/nexus/content/repositories/snapshots/</url>
-        </repository>
-    </distributionManagement>
-
-    <!-- common repositories -->
     <repositories>
         <repository>
             <id>central</id>
-            <!-- This should be at top, it makes maven try the central repo first and then others and hence faster dep resolution -->
             <name>Maven Repository</name>
             <url>https://repo1.maven.org/maven2</url>
             <releases>
@@ -61,29 +43,8 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-        <repository>
-            <id>ce.thirdparty</id>
-            <url>http://10.100.31.71:8080/nexus/content/repositories/thirdparty/</url>
-        </repository>
-        <repository>
-            <id>ce.snapshots</id>
-            <url>http://10.100.31.71:8080/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>oracle</id>
-            <url>http://code.lds.org/nexus/content/groups/main-repo/</url>
-        </repository>
-        <repository>
-            <id>conjars.org</id>
-            <url>http://conjars.org/repo/</url>
-        </repository>
-        <repository>
-            <id>springrepo</id>
-            <url>http://repo.spring.io/libs-release-remote/</url>
-        </repository>
     </repositories>
 
-    <!-- common pluginRepositories -->
     <pluginRepositories>
         <pluginRepository>
             <id>central</id>
@@ -95,23 +56,14 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
-        <pluginRepository>
-            <id>sonatype-oss-public</id>
-            <url>https://oss.sonatype.org/content/groups/public/</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>scala-tools.org</id>
-            <name>Scala-tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </pluginRepository>
     </pluginRepositories>
 
     <dependencies>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.library}</artifactId>
+            <artifactId>scalatest_${scala.binary.version}</artifactId>
             <version>${scalatest.version}</version>
-            <scope>provided</scope>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -123,11 +75,10 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <!-- The scala-maven-plugin is used for compiling/testing/running/documenting scala code in maven -->
                 <version>3.2.2</version>
                 <configuration>
                     <scalaVersion>${scala.version}</scalaVersion>
-                    <scalaCompatVersion>${scala.library}</scalaCompatVersion>
+                    <scalaCompatVersion>${scala.binary.version}</scalaCompatVersion>
                     <recompileMode>incremental</recompileMode>
                     <useZincServer>false</useZincServer>
                     <args>
@@ -136,10 +87,8 @@
                         <arg>-feature</arg>
                     </args>
                     <jvmArgs>
-                        <!--<jvmArg>-Xss2m</jvmArg>-->
-                        <jvmArg>-Xms512M</jvmArg>
-                        <jvmArg>-Xmx2048M</jvmArg>
-                        <jvmArg>-XX:MaxPermSize=2048M</jvmArg>
+                        <jvmArg>-Xms1024m</jvmArg>
+                        <jvmArg>-Xmx1024m</jvmArg>
                         <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                     </jvmArgs>
                     <javacArgs>
@@ -171,8 +120,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <!-- The Compiler Plugin is used to compile the sources of your project -->
-                <version>3.5.1</version>
+                <version>3.6.1</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -201,7 +149,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <!-- The Surefire Plugin is used during the test phase of the build lifecycle to execute the unit tests of an application -->
                 <version>2.19.1</version>
                 <configuration>
                     <skipTests>true</skipTests>
@@ -217,7 +164,7 @@
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <junitxml>.</junitxml>
                     <filereports>EDPTestSuite.txt</filereports>
-                    <argLine>-Xms512M -Xmx2048M -XX:MaxPermSize=2048M -XX:+CMSClassUnloadingEnabled</argLine>
+                    <argLine>-Xms512M -Xmx2048M -XX:+CMSClassUnloadingEnabled</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -260,19 +207,6 @@
                         <!--<phase>initialize</phase>-->
                         <!--<goals>-->
                             <!--<goal>check</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>license-maven-plugin</artifactId>-->
-                <!--<version>1.13</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>download-licenses</id>-->
-                        <!--<goals>-->
-                            <!--<goal>download-licenses</goal>-->
                         <!--</goals>-->
                     <!--</execution>-->
                 <!--</executions>-->
